# youtube_download_api

./: .dockerignore  .env.example  .gitignore  CHANGELOG_CDP_M4A.md  CLAUDE.md  Dockerfile  README.md  TODOS.md  docker-compose.dev.yml  mypy.ini  ops.env.example  pyproject.toml  pytest.ini  test_audio_fallback.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml  gate.yml
docker/: build_and_export.bat  docker-compose.prod.yml
docs/: IMPLEMENTATION_SUMMARY.md  LOGIC_MATRIX.md  METADATA_ONLY_ANALYSIS.md  PRIORITY_DESIGN.md  README.md  REORGANIZATION_PLAN.md  RETRY_POLICY_CHANGE.md  VIDEO_INFO_API_DESIGN.md  VIDEO_INFO_API_IMPLEMENTATION.md  VIDEO_INFO_API_SIMPLE.md  admin-ui-redesign.md  api-reference.md  audio_download_stall.md  bugfix-transcript-detection-cache.md  cdp-sidecar-guide.md  cdp_downloader_design.md  cdp_human_behavior_design.md  cdp_human_behavior_test_guide.md  cdp_m4a_conversion.md  cdp_quick_start.md  cookie_sync_feature.md  deployment.md  memory-leak-fix-plan.md  quick-start.md  项目需求.md
docs/architecture/: cdp-download-optimization.md  downloader-architecture.md  overview.md
docs/configuration/: advanced.md  circuit-breakers.md  downloaders.md  overview.md
docs/design/: metadata-cache-optimization.md  priority-test-report.md
docs/development/: development.md  docker-optimization.md
docs/diagnosis/: CHANGELOG.md  FINAL_SUMMARY.md  TIKHUB_DIAGNOSIS_REPORT.md  downloader-retry-improvement.md
docs/guides/: manual-upload.md  video-metadata.md  webhook-integration.md
docs/history/diagnosis-archive/: refactoring-summary.md  retry-mechanism-analysis.md
docs/integration/: cdp-sidecar-guide.md  tikhub-api.md  youtube-data-api.md
docs/operations/: monitoring.md  performance-tuning.md  troubleshooting.md
docs/playright/: gemini 后续沟通.md  idm思路沟通.md  youtube_download_notes.md
docs/tikhub_youtube/: tikhub.md
docs/troubleshooting/: critical-fix.md  rate-limiting.md  your-config-analysis.md
docs/user-guides/: client-guide.md  wechat-usage-guide.md
examples/: priority_example.py
migrations/: 001_add_partial_success_and_ip_ban.sql
scripts/: check_production_config.py  dev.ps1  dev.sh  start_chrome_cdp.bat
src/: __init__.py  config.py  main.py
src/api/: deps.py  manual_upload_routes.py  routes.py  schemas.py  settings_routes.py  stats_routes.py  video_info_routes.py  video_resource_routes.py
src/core/: downloader.py  ip_ban_breaker.py  ip_ban_models.py  worker.py
src/db/: database.py  models.py
src/downloaders/: __init__.py  base.py  cdp_downloader.py  circuit_breaker.py  exceptions.py  manager.py  models.py  pot_health.py  tikhub_downloader.py  youtube_data_api_downloader.py  ytdlp_downloader.py
src/downloaders/cdp/: __init__.py  audio_downloader.py  downloader.py  human_behavior.py  models.py
src/services/: callback_service.py  file_service.py  manual_upload_service.py  metadata_service.py  metrics.py  notify.py  task_service.py  tikhub_service.py  transcode_service.py
src/static/admin/: app.js  index.html  style.css
src/utils/: keyed_lock.py  logger.py
tests/: README.md  TEST_RESULTS.md  conftest.py  test_cdp_human_behavior.py  test_cdp_manual.py  test_cdp_multipart.py  test_cdp_reconnection.py  test_ip_ban_passive_probe.py  test_pot_experiment.py  test_priority.py  test_simple.py  test_transcript_detection_cache.py  test_youtube_data_api_integration.py
tests/api/: test_auth.py  test_routes.py  test_stats_routes.py
tests/downloaders/: test_circuit_breaker.py
tests/downloaders/cdp/: test_cdn_node_fallback.py  test_cdp_connection_lost.py  test_cdp_human_behavior.py  test_cdp_human_behavior_integration.py  test_cdp_isolation.py  test_cdp_multipart.py  test_cdp_pause_control.py  test_cdp_playwright_lifecycle.py  test_cdp_subtitle_debug.py  test_cdp_transcode.py  test_cookie_retry.py  test_multipart_cancellation.py  test_multipart_part_file_isolation.py
tests/downloaders/tikhub/: test_tikhub_connection.py  test_tikhub_full.py  test_tikhub_subtitle.py
tests/integration/: test_metadata_content_level_propagation.py  test_priority_integration.py  test_scenario_priority.py  test_simple.py  test_youtube_data_api_integration.py
tests/manual/: README.md  test_cdp_human_behavior_manual.py  test_cdp_manual.py  test_cdp_transcript.py  test_proxy_env.py  test_retry_mechanism.py  test_tikhub_connection.py  test_tikhub_subtitle.py
tests/services/: test_file_service_resource.py  test_manual_upload_service.py  test_task_service.py
tests/test_services/: test_manual_upload_service.py
tests/unit/: test_403_stop_fallback.py  test_api_key_auth.py  test_background_tasks_strong_ref.py  test_callback_service.py  test_config_validation.py  test_database.py  test_docker_compose_memory_limits.py  test_download_modes.py  test_downloader_attempts.py  test_downloader_attribution.py  test_downloader_manager.py  test_ip_ban_passive_probe.py  test_ip_ban_persistence.py  test_logger_setup.py  test_main_wiring.py  test_metadata_completion.py  test_metadata_content_errors.py  test_metadata_locks_bounded.py  test_metrics.py  test_notification_cache_bounded.py  test_notify.py  test_owned_pages_sweep.py  test_pot_config.py  test_pot_health.py  test_priority.py  test_resource_cleanup.py  test_runtime_metrics.py  test_tikhub_fetch_metadata.py  test_transcode_process_cleanup.py  test_worker_callback_background.py  test_worker_probe_ban_wiring.py  test_worker_skip.py  test_youtube_data_api_fetch_metadata.py  test_ytdlp_fetch_metadata.py
tests/utils/: test_helpers.py  test_keyed_lock.py
