[project]
name = "youtube-audio-api"
version = "1.0.0"
description = "YouTube audio download service with RESTful API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Download Core
    # curl-cffi extras enables TLS fingerprint impersonation
    "yt-dlp[default,curl-cffi]>=2025.05.22",
    "bgutil-ytdlp-pot-provider",
    # Database
    "aiosqlite>=0.19.0",
    # Configuration
    "pydantic-settings>=2.0.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Notification
    "wecom-notifier>=0.2.0",
    # Logging
    "loguru>=0.7.0",
    # HTTP Client
    "httpx>=0.25.0",
    # Utilities
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    # Type checking
    "mypy>=1.7.0",
    "types-aiofiles>=23.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "types-aiofiles>=23.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
