[project]
name = "youtube-audio-api"
version = "1.0.0"
description = "YouTube audio download service with RESTful API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Download Core
    # curl-cffi extras enables TLS fingerprint impersonation
    # 2026-01-25: 升级到 0.14.0 修复 TLS 错误
    # yt-dlp 使用预发布版本以支持 curl-cffi 0.14.0
    "curl-cffi>=0.14.0",
    "yt-dlp[default,curl-cffi]>=2026.1.19",
    "bgutil-ytdlp-pot-provider>=1.3.1",
    # CDP Downloader (Playwright)
    "playwright>=1.40.0",
    # Database
    "aiosqlite>=0.19.0",
    # Configuration
    "pydantic-settings>=2.0.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Notification
    "wecom-notifier>=0.2.0",
    # Logging
    "loguru>=0.7.0",
    # HTTP Client
    "httpx>=0.25.0",
    # Utilities
    "python-multipart>=0.0.6",
    # Caching
    "cachetools>=5.3.0",
    # YouTube Data API v3
    "google-api-python-client>=2.100.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    # Type checking
    "mypy>=1.7.0",
    "types-aiofiles>=23.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "types-aiofiles>=23.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
